--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --config webpack.config.dev.js",
-    "build": "webpact --config webpact.config.js"
+    "build": "webpact --config webpack.config.js"
   },
   "repository": {
     "type": "git",
